--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://venturebeat.com/wp-content/uploads/2010/10/instagram-logo.jpg?resize=190%2C196&strip=all" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
