--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://scontent-sea1-1.cdninstagram.com/t51.2885-19/s150x150/10499173_422131091311213_806773630_a.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey YOU {{name}}!</h1>
                         <hr class="star-light">
